--- a/static/css/style.css
+++ b/static/css/style.css
@@ -307,13 +307,14 @@ button, input {
 .block_link{
     cursor: pointer;
     transition: 0.2s ease-in;
+    border-radius: 20px;
 }
 
 .block_link:hover{
-    background: rgba(0, 255, 255, 0.05)
+    background: rgba(0, 255, 255, 0.1)
 }
 
-.tournament {
+.centered_block {
     text-align: center;
     padding: 10px 10px;
     width: 100%;
@@ -321,7 +322,7 @@ button, input {
     align-items: center;
 }
 
-.tournaments_box{
+.box-large{
     max-width: 700px;
     background: #fff;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
@@ -368,8 +369,8 @@ button, input {
     flex-shrink: 0;
     flex-grow: 1;
     background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
-    border-radius: 4px;
+    box-shadow: 0 4px 8px 2px rgba(0,0,0,0.2);
+    border-radius: 8px;
     padding: 20px;
     margin: 20px;
     box-sizing: border-box;
@@ -384,6 +385,10 @@ button, input {
     max-width: 550px;
 }
 
+.box-large{
+    max-width: 700px;
+}
+
 .box_item-title{
     color: #333;
     font-size: 1.6em;
@@ -394,8 +399,8 @@ button, input {
 
 .title_container{
     display: flex;
-    flex-wrap: wrap;
-    align-items: flex-end;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     margin-bottom: 10px;
     margin-top: 20px;
