--- a/templates/index.html
+++ b/templates/index.html
@@ -15,18 +15,12 @@
           </a>
         </div>
       {% endif %}
+      {% from 'models_macroses.html' import tour_dates %}
       {% for tour in tournaments %}
-      {% set format = "%d.%m.%Y" %}
         <div class="centered_block block_link" onclick="redirect('/tournament/{{tour.id}}')">
           <h2 class="item_title">{{tour.title}}</h2>
           <div class="dates">
-            {% if tour.start and tour.end %}
-            {{tour.start.strftime(format)}} - {{tour.end.strftime(format)}}
-            {% elif tour.start %}
-            {{tour.start.strftime(format)}}
-            {% else %}
-            Даты проведения не известны.
-            {% endif %}
+            {{tour_dates(tour)}}
           </div>
         </div>
       {% endfor %}
